# BreaDOS

./: .gdbinit  .gitignore  README.md  meson.build  setup.sh
cross/: setup.sh
scripts/: create_fs.sh
src/: apic.c  apic.h  bootstrap.s  entry.c  grub.cfg  interrupt.c  interrupt.h  io.h  linker.ld  memory.c  memory.h  rye.c  types.h
src/drivers/: vga.c  vga.h
src/text/: device.c  device.h  driver.h  text.c  text.h
src/text/vga/: driver.c  driver.h
tools/: cross_file.template  setup.sh
